# robotmoney-skills

./: .env.example  .gitignore  BOOTSTRAP.md  CLAUDE.md  Cargo.toml  Makefile  Makefile.local.example  README.md  docker-compose.full-stack.yaml  foundry.toml  slither.config.json
.github/scripts/: assert_headless_deposit_delta.py  assert_headless_deposit_sender.py  assert_headless_deposit_transcript.py  assert_headless_read_transcript.py  (+14 more)
clients/explorer-api/: Cargo.toml  Dockerfile
clients/explorer-api/migrations/: 0001_init.sql
clients/explorer-api/src/: error.rs  lib.rs  main.rs  model.rs  routes.rs  state.rs
clients/explorer-api/tests/: canonical_schema.rs  cors.rs  endpoints.rs  router_introspection.rs
clients/explorer-api/tests/common/: mod.rs
clients/rust-payment-client/: Cargo.toml
clients/rust-payment-client/abi/: Erc20.json  MockVault.json  PortfolioRouter.json  RobotMoneyGateway.json  RouterGovernance.json  TimelockController.json  VaultRegistry.json
clients/rust-payment-client/src/: cli.rs  config.rs  errors.rs  lib.rs  logging.rs  main.rs  network_env.rs  read_output.rs  replay_cache.rs
clients/rust-payment-client/src/commands/: deposit.rs  get_agent.rs  get_allowance.rs  get_balance.rs  get_deposit.rs  get_gateway.rs  get_governance.rs  get_roles.rs  get_router.rs  get_timelock.rs  get_tx.rs  get_vault.rs  get_vaults.rs  mod.rs  self_check.rs  status.rs  withdraw.rs
clients/rust-payment-client/src/fees/: mod.rs
clients/rust-payment-client/src/gateway/: mod.rs
clients/rust-payment-client/src/nonce/: mod.rs
clients/rust-payment-client/src/policy/: mod.rs  tests.rs
clients/rust-payment-client/src/rpc/: mod.rs
clients/rust-payment-client/src/signer/: mod.rs  software.rs
clients/rust-payment-client/src/tx/: mod.rs
clients/rust-payment-client/tests/: cli.rs  cli_deposit.rs  cli_get_agent.rs  cli_get_allowance.rs  cli_get_balance.rs  cli_get_deposit.rs  cli_get_gateway.rs  cli_get_roles.rs  cli_get_router.rs  cli_get_timelock.rs  cli_get_tx.rs  cli_get_vault.rs  cli_get_vaults.rs  cli_self_check.rs  cli_status.rs  dapp_toml_roundtrip.rs  skill_docs_parity.rs
clients/rust-payment-client/tests/common/: mod.rs
clients/rust-payment-client/tests/fixtures/: dapp-exported-config.toml
clients/rust-payment-daemon/: Cargo.toml
clients/rust-payment-daemon/abi/: MockVault.json
clients/rust-payment-daemon/src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs
clients/rust-payment-daemon/src/commands/: deposit.rs  mod.rs  self_check.rs  status.rs
clients/rust-payment-daemon/src/fees/: mod.rs
clients/rust-payment-daemon/src/gateway/: mod.rs
clients/rust-payment-daemon/src/nonce/: mod.rs
clients/rust-payment-daemon/src/policy/: mod.rs  tests.rs
clients/rust-payment-daemon/src/rpc/: mod.rs
clients/rust-payment-daemon/src/signer/: mod.rs  software.rs
clients/rust-payment-daemon/src/tx/: mod.rs
clients/rust-payment-daemon/tests/: cli.rs  cli_deposit.rs  cli_self_check.rs  cli_status.rs
clients/rust-payment-daemon/tests/common/: mod.rs
config/: agent-token-shortlist.json  dex-pools.json  feature-flags.json
contracts/: FeatureFlags.sol  PortfolioRouter.sol  RmToken.sol  RobotMoneyVault.sol  RouterGovernance.sol  UniswapV3PoolSlot0Stub.sol  VaultRegistry.sol
crates/rmpc-logging/: Cargo.toml
crates/rmpc-logging/src/: lib.rs
crates/rmpc-logging/tests/: workspace_uses_shared_facade.rs
demo/: fork-config.toml  fork-metadata.json  openclaw-config.toml  rmpc-config-template.toml
deployments/: full-stack.json
docs/: agent-ensure-feature.md  agent-warnings.md  architecture-proposal-v0.md  architecture.md  book.toml  definitions.md  environments.md  implementation-plan-mvp.md  implementation-plan.md  prd.md  project-roadmap.md  review-2026-05-06-022928.md  security-model.md  testing-strategy-ethereum.md
services/explorer-indexer/: Cargo.toml  Dockerfile
services/explorer-indexer/migrations/: 0001_minimum_tables.sql  0002_add_vaults_table.sql  0003_add_governance_tables.sql  0003_multi_vault_schema.sql  0004_add_router_weight_snapshots.sql  0006_agent_deposit_vault_and_router_legs.sql
services/explorer-indexer/src/: abi.rs  db.rs  feature_flags.rs  indexer.rs  lib.rs  main.rs  rpc.rs
services/explorer-indexer/tests/: cursor_header_reorg.rs  fork_indexer.rs  idempotency.rs  migrations.rs  multi_vault.rs  router_deposit.rs  rpc_failure.rs  vault_registry.rs
services/explorer-indexer/tests/common/: mod.rs
testing/: README.md
testing/doctests/: Cargo.toml
testing/doctests/fixtures/opencode/: rmpc-fork.toml.template
testing/doctests/src/: lib.rs  opencode.rs
testing/doctests/tests/: opencode_config.rs  opencode_parity.rs  opencode_read_only.rs  opencode_refusal.rs
testing/ethereum-testnet/e2e-rust/: Cargo.toml  README.md
testing/ethereum-testnet/e2e-rust/src/: lib.rs
testing/ethereum-testnet/e2e-rust/tests/: anvil.rs  anvil_smoke.rs  geth.rs  geth_smoke.rs  scenarios.rs  smoke.rs  window_cap.rs  withdraw.rs
testing/fork-e2e-rust/: Cargo.toml  README.md
testing/fork-e2e-rust/src/: addresses.rs  lib.rs  scenarios.rs
testing/fork-e2e-rust/tests/: abi_address_sanity.rs  devnet_adapter_round_trip.rs  dex_route_smoke.rs  failure_surface_smoke.rs  gas_estimate_reality_check.rs  governance.rs  landing_price_strip_fork.rs  registry.rs  rmpc_get_allowance_fork.rs  rmpc_get_balance_fork.rs  rmpc_get_deposit_fork.rs  rmpc_get_timelock_fork.rs  rmpc_get_tx_fork.rs  rmpc_get_vault_fork.rs  router.rs  vault_deposit_redeem_smoke.rs  withdrawal.rs
testing/fork-e2e-rust/tests/rmpc_bin/: mod.rs
testing/opencode-walkthrough/: Cargo.toml
testing/opencode-walkthrough/src/: lib.rs
testing/opencode-walkthrough/tests/: config_template_parses.rs  read_only_walkthrough.rs  refusal_walkthrough.rs  walkthrough_parity.rs
testing/smoke-test/: Cargo.toml
testing/smoke-test/src/: fork_manifest.rs  genesis_alloc.rs  lib.rs  logging.rs
testing/smoke-test/tests/: cli_meta.rs  demo_seeding.rs  faucet_eth.rs  faucet_rm.rs  fixture_meta.rs  full_stack_demo_tvl.rs  fund_usdc.rs  governance.rs  vault_deposit_redeem.rs
(+701 files in other folders)
