[package]
name = "rust-payment-client"
version = "0.1.0"
edition = "2021"
description = "Robot Money payment client (rmpc) — signs and broadcasts gateway-mediated USDC deposits."
license = "MIT"
publish = false

[lib]
name = "rust_payment_client"
path = "src/lib.rs"

[[bin]]
name = "rmpc"
path = "src/main.rs"

[dependencies]
# Per docs/implementation-plan-mvp.md §3.5
alloy-primitives = { version = "0.8", features = ["k256"] }
alloy-sol-types = { version = "0.8", features = ["json"] }
alloy-consensus = { version = "0.5", features = ["k256"] }
alloy-rpc-types = "0.5"
alloy-rlp = "0.3"
fs2 = "0.4"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
k256 = { version = "0.13", features = ["ecdsa"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
flexi_logger = { version = "0.31", default-features = false, features = ["textfilter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
mockito = "1"
