[package]
name = "rust-payment-daemon"
version = "0.1.0"
edition = "2021"
description = "Robot Money payment daemon (rmpd) — signs and broadcasts gateway-mediated USDC deposits."
license = "MIT"
publish = false

[[bin]]
name = "rmpd"
path = "src/main.rs"

[dependencies]
# Per docs/implementation-plan-mvp.md §3.5
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
alloy-consensus = "0.5"
alloy-rpc-types = "0.5"
k256 = "0.13"
aes-gcm = "0.10"
argon2 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
