[package]
name = "rmpc-fork-e2e"
version = "0.1.0"
edition = "2021"
description = "Phase 2 forked-mainnet e2e harness for Robot Money — drives anvil-fork against Base mainnet."
license = "MIT"
publish = false

# Canonical: docs/implementation-plan.md §8 — Phase 2 Forked Smart-Contract E2E.
# Decision record: docs/technical/fork-e2e-decisions.md (issue #47).
# Implements: issue #48.

[lib]
name = "rmpc_fork_e2e"
path = "src/lib.rs"

[dependencies]
# Typed ABI encoding/decoding via alloy's sol! macro and primitives.
alloy-primitives = { version = "0.8", features = ["k256"] }
alloy-sol-types = { version = "0.8", features = ["json"] }
alloy-consensus = { version = "0.5", features = ["k256"] }
alloy-eips = "0.5"
alloy-rpc-types = "0.5"
alloy-rlp = "0.3"

# Ephemeral signer key generation. Re-export of k256 used by alloy.
k256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# JSON-RPC transport. Sync reqwest is enough for the harness; tests
# remain plain `#[test]` to match the Phase 1 crate's conventions.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
once_cell = "1"
tempfile = "3"
which = "6"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
