[package]
name = "rmpd-e2e"
version = "0.1.0"
edition = "2021"
description = "End-to-end harness for rmpd against Anvil and the Geth+Lighthouse devnet."
license = "MIT"
publish = false

[lib]
name = "rmpd_e2e"
path = "src/lib.rs"

[dependencies]
# Re-use the rmpd library for keystore creation, gateway ABI, and
# config types so the harness stays in lockstep with the binary it
# drives. Path dep against the sibling crate.
rust-payment-daemon = { path = "../../../clients/rust-payment-daemon" }

alloy-primitives = { version = "0.8", features = ["k256"] }
alloy-sol-types = { version = "0.8", features = ["json"] }
k256 = { version = "0.13", features = ["ecdsa"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
which = "6"
hex = "0.4"
once_cell = "1"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
