[package]
name = "rmpc-e2e"
version = "0.1.0"
edition = "2021"
description = "rmpc integration test harness built on the smoke-test devnet fixture."
license = "MIT"
publish = false

[lib]
name = "rmpc_e2e"
path = "src/lib.rs"

[dependencies]
# Devnet fixture — boots Geth+Lighthouse and deploys contracts.
smoke-test = { path = "../../smoke-test" }

# rmpc library for keystore creation and the PASSPHRASE_ENV_VAR constant.
rust-payment-client = { path = "../../../clients/rust-payment-client" }

alloy-primitives = { version = "0.8", features = ["k256"] }
serde_json = "1"
once_cell = "1"

[dev-dependencies]
serde_json = "1"
